--- a/doc/release/0.12.0-notes.rst
+++ b/doc/release/0.12.0-notes.rst
@@ -41,14 +41,14 @@ exactly the same interface as KDTree, and can be used as a drop-in replacement.
 
 Voronoi diagrams and convex hulls
 ---------------------------------
-`scipy.spatial` contains now functionality for computing Voronoi
+`scipy.spatial` now contains functionality for computing Voronoi
 diagrams and convex hulls using the Qhull library. (Delaunay
 triangulation was available since Scipy 0.9.0.)
 
 Delaunay improvements
 ---------------------
 It's now possible to pass in custom Qhull options in Delaunay
-triangulation. Coplanar points are also now recorded, if present.
+triangulation. Coplanar points are now also recorded, if present.
 
 ``scipy.optimize`` improvements
 -------------------------------
