DOC: update release notes re incremental qhull mode

--- a/doc/release/0.12.0-notes.rst
+++ b/doc/release/0.12.0-notes.rst
@@ -49,6 +49,8 @@ Delaunay improvements
 ---------------------
 It's now possible to pass in custom Qhull options in Delaunay
 triangulation. Coplanar points are now also recorded, if present.
+Incremental construction of Delaunay triangulations is now also
+possible.
 
 ``scipy.optimize`` improvements
 -------------------------------
